Added Session based Authentication to Secure the Backend